--- a/website/pages/docs/core/TypedRoute.mdx
+++ b/website/pages/docs/core/TypedRoute.mdx
@@ -33,46 +33,24 @@ Moreover, `TypedRoute` is much easier than `class-transformer`, because it just 
     defaultIndex={1}>
     <Tab>
 ```typescript copy filename="IBbsArticle.ts" showLineNumbers
-export interface IBbsArticle extends IBbsArticle.IStore {
-    /**
-     * @format uuid
-     */
-    id: string;
+import { tags } from "typia";
 
-    /**
-     * @format date-time
-     */
-    created_at: string;
+export interface IBbsArticle extends IBbsArticle.IStore {
+    id: string & tags.Format<"uuid">;
+    created_at: string & tags.Format<"date-time">;
 }
 export namespace IBbsArticle {
     export interface IStore {
-        /** 
-         * @minLength 3
-         * @maxLength 50
-         */
-        title: string;
+        title: string & tags.MinLength<3> & tags.MaxLength<50>;
         body: string;
         files: IAttachmentFile[];
     }
 }
 
 export interface IAttachmentFile {
-    /**
-     * @minLengt 1
-     * @maxLength 255
-     */
-    name: string | null;
-
-    /**
-     * @minLength 1
-     * @maxLength 8
-     */
-    extension: string | null;
-    
-    /**
-     * @format url
-     */
-    url: string;
+    name: null | (string & tags.MinLength<1> & tags.MaxLength<255>)
+    extension: null | (string & tags.MinLength<1> & tags.MaxLength<8>)
+    url: string & tags.Format<"url">;
 }
 ```
     </Tab>
@@ -102,7 +80,7 @@ export class BbsArticlesController {
 ```
     </Tab>
     <Tab>
-```javascript filename="BbsArticlesController.js" showLineNumbers {41-152}
+```javascript filename="BbsArticlesController.js" showLineNumbers {41-150}
 "use strict";
 var __decorate = (this && this.__decorate) || function (decorators, target, key, desc) {
     var c = arguments.length, r = c < 3 ? target : desc === null ? desc = Object.getOwnPropertyDescriptor(target, key) : desc, d;
@@ -142,127 +120,124 @@ let BbsArticlesController = class BbsArticlesController {
         });
     }
 };
+exports.BbsArticlesController = BbsArticlesController;
 __decorate([
-    core_1.TypedRoute.Get("random", { 
-        type: "assert", 
-        assert: input => { 
-            const assert = input => {
-                const $guard = core_1.TypedRoute.Get.guard;
-                const $is_uuid = core_1.TypedRoute.Get.is_uuid;
-                const $is_datetime = core_1.TypedRoute.Get.is_datetime;
-                const $is_custom = core_1.TypedRoute.Get.is_custom;
-                const $is_url = core_1.TypedRoute.Get.is_url;
-                const __is = input => {
-                    const $io0 = input => "string" === typeof input.id && $is_uuid(input.id) && ("string" === typeof input.created_at && $is_datetime(input.created_at)) && ("string" === typeof input.title && 3 <= input.title.length && 50 >= input.title.length) && "string" === typeof input.body && (Array.isArray(input.files) && input.files.every(elem => "object" === typeof elem && null !== elem && $io1(elem)));
-                    const $io1 = input => (null === input.name || "string" === typeof input.name && 255 >= input.name.length && $is_custom("minLengt", "string", "1", input.name)) && (null === input.extension || "string" === typeof input.extension && 1 <= input.extension.length && 8 >= input.extension.length) && ("string" === typeof input.url && $is_url(input.url));
-                    return "object" === typeof input && null !== input && $io0(input);
-                };
-                if (false === __is(input))
-                    ((input, _path, _exceptionable = true) => {
-                        const $ao0 = (input, _path, _exceptionable = true) => ("string" === typeof input.id && ($is_uuid(input.id) || $guard(_exceptionable, {
-                            path: _path + ".id",
-                            expected: "string (@format uuid)",
-                            value: input.id
-                        })) || $guard(_exceptionable, {
-                            path: _path + ".id",
-                            expected: "string",
-                            value: input.id
-                        })) && ("string" === typeof input.created_at && ($is_datetime(input.created_at) || $guard(_exceptionable, {
-                            path: _path + ".created_at",
-                            expected: "string (@format datetime)",
-                            value: input.created_at
-                        })) || $guard(_exceptionable, {
-                            path: _path + ".created_at",
-                            expected: "string",
-                            value: input.created_at
-                        })) && ("string" === typeof input.title && (3 <= input.title.length || $guard(_exceptionable, {
-                            path: _path + ".title",
-                            expected: "string (@minLength 3)",
-                            value: input.title
-                        })) && (50 >= input.title.length || $guard(_exceptionable, {
-                            path: _path + ".title",
-                            expected: "string (@maxLength 50)",
-                            value: input.title
-                        })) || $guard(_exceptionable, {
-                            path: _path + ".title",
-                            expected: "string",
-                            value: input.title
-                        })) && ("string" === typeof input.body || $guard(_exceptionable, {
-                            path: _path + ".body",
-                            expected: "string",
-                            value: input.body
-                        })) && ((Array.isArray(input.files) || $guard(_exceptionable, {
-                            path: _path + ".files",
-                            expected: "Array<IAttachmentFile>",
-                            value: input.files
-                        })) && input.files.every((elem, _index1) => ("object" === typeof elem && null !== elem || $guard(_exceptionable, {
-                            path: _path + ".files[" + _index1 + "]",
-                            expected: "IAttachmentFile",
-                            value: elem
-                        })) && $ao1(elem, _path + ".files[" + _index1 + "]", true && _exceptionable)));
-                        const $ao1 = (input, _path, _exceptionable = true) => (null === input.name || "string" === typeof input.name && (255 >= input.name.length || $guard(_exceptionable, {
-                            path: _path + ".name",
-                            expected: "string (@maxLength 255)",
-                            value: input.name
-                        })) && ($is_custom("minLengt", "string", "1", input.name) || $guard(_exceptionable, {
-                            path: _path + ".name",
-                            expected: "string (@minLengt 1)",
-                            value: input.name
-                        })) || $guard(_exceptionable, {
-                            path: _path + ".name",
-                            expected: "(null | string)",
-                            value: input.name
-                        })) && (null === input.extension || "string" === typeof input.extension && (1 <= input.extension.length || $guard(_exceptionable, {
-                            path: _path + ".extension",
-                            expected: "string (@minLength 1)",
-                            value: input.extension
-                        })) && (8 >= input.extension.length || $guard(_exceptionable, {
-                            path: _path + ".extension",
-                            expected: "string (@maxLength 8)",
-                            value: input.extension
-                        })) || $guard(_exceptionable, {
-                            path: _path + ".extension",
-                            expected: "(null | string)",
-                            value: input.extension
-                        })) && ("string" === typeof input.url && ($is_url(input.url) || $guard(_exceptionable, {
-                            path: _path + ".url",
-                            expected: "string (@format url)",
-                            value: input.url
-                        })) || $guard(_exceptionable, {
-                            path: _path + ".url",
-                            expected: "string",
-                            value: input.url
-                        }));
-                        return ("object" === typeof input && null !== input || $guard(true, {
-                            path: _path + "",
-                            expected: "IBbsArticle",
-                            value: input
-                        })) && $ao0(input, _path + "", true);
-                    })(input, "$input", true);
-                return input;
-            }; 
-            const stringify = input => {
-                const $string = core_1.TypedRoute.Get.string;
-                const $is_uuid = core_1.TypedRoute.Get.is_uuid;
-                const $is_datetime = core_1.TypedRoute.Get.is_datetime;
-                const $is_custom = core_1.TypedRoute.Get.is_custom;
-                const $is_url = core_1.TypedRoute.Get.is_url;
-                const $io1 = input => (null === input.name || "string" === typeof input.name && 255 >= input.name.length && $is_custom("minLengt", "string", "1", input.name)) && (null === input.extension || "string" === typeof input.extension && 1 <= input.extension.length && 8 >= input.extension.length) && ("string" === typeof input.url && $is_url(input.url));
-                const $so0 = input => `{"id":${"\"" + input.id + "\""},"created_at":${"\"" + input.created_at + "\""},"title":${$string(input.title)},"body":${$string(input.body)},"files":${`[${input.files.map(elem => $so1(elem)).join(",")}]`}}`;
-                const $so1 = input => `{"name":${null !== input.name ? $string(input.name) : "null"},"extension":${null !== input.extension ? $string(input.extension) : "null"},"url":${"\"" + input.url + "\""}}`;
-                return $so0(input);
-            }; 
-            return stringify(assert(input)); 
-        } 
-    }),
+    core_1.TypedRoute.Get("random", { type: "assert", assert: input => { const assert = input => {
+            const __is = input => {
+                const $io0 = input => "string" === typeof input.id && /^(?:[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}|00000000-0000-0000-0000-000000000000)$/i.test(input.id) && ("string" === typeof input.created_at && !isNaN(new Date(input.created_at).getTime())) && ("string" === typeof input.title && (3 <= input.title.length && input.title.length <= 50)) && "string" === typeof input.body && (Array.isArray(input.files) && input.files.every(elem => "object" === typeof elem && null !== elem && $io1(elem)));
+                const $io1 = input => (null === input.name || "string" === typeof input.name && (1 <= input.name.length && input.name.length <= 255)) && (null === input.extension || "string" === typeof input.extension && (1 <= input.extension.length && input.extension.length <= 8)) && ("string" === typeof input.url && /^[a-zA-Z0-9]+:\/\/(?:www.)?[-a-zA-Z0-9@:%._+~#=]{1,256}.[a-zA-Z0-9()]{1,6}\b(?:[-a-zA-Z0-9()@:%_+.~#?&/=]*)$/.test(input.url));
+                return "object" === typeof input && null !== input && $io0(input);
+            };
+            if (false === __is(input))
+                ((input, _path, _exceptionable = true) => {
+                    const $guard = core_1.TypedRoute.Get.guard;
+                    const $ao0 = (input, _path, _exceptionable = true) => ("string" === typeof input.id && (/^(?:[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}|00000000-0000-0000-0000-000000000000)$/i.test(input.id) || $guard(_exceptionable, {
+                        path: _path + ".id",
+                        expected: "string & Format<\"uuid\">",
+                        value: input.id
+                    })) || $guard(_exceptionable, {
+                        path: _path + ".id",
+                        expected: "(string & Format<\"uuid\">)",
+                        value: input.id
+                    })) && ("string" === typeof input.created_at && (!isNaN(new Date(input.created_at).getTime()) || $guard(_exceptionable, {
+                        path: _path + ".created_at",
+                        expected: "string & Format<\"date-time\">",
+                        value: input.created_at
+                    })) || $guard(_exceptionable, {
+                        path: _path + ".created_at",
+                        expected: "(string & Format<\"date-time\">)",
+                        value: input.created_at
+                    })) && ("string" === typeof input.title && (3 <= input.title.length || $guard(_exceptionable, {
+                        path: _path + ".title",
+                        expected: "string & MinLength<3>",
+                        value: input.title
+                    })) && (input.title.length <= 50 || $guard(_exceptionable, {
+                        path: _path + ".title",
+                        expected: "string & MaxLength<50>",
+                        value: input.title
+                    })) || $guard(_exceptionable, {
+                        path: _path + ".title",
+                        expected: "(string & MinLength<3> & MaxLength<50>)",
+                        value: input.title
+                    })) && ("string" === typeof input.body || $guard(_exceptionable, {
+                        path: _path + ".body",
+                        expected: "string",
+                        value: input.body
+                    })) && ((Array.isArray(input.files) || $guard(_exceptionable, {
+                        path: _path + ".files",
+                        expected: "Array<IAttachmentFile>",
+                        value: input.files
+                    })) && input.files.every((elem, _index1) => ("object" === typeof elem && null !== elem || $guard(_exceptionable, {
+                        path: _path + ".files[" + _index1 + "]",
+                        expected: "IAttachmentFile",
+                        value: elem
+                    })) && $ao1(elem, _path + ".files[" + _index1 + "]", true && _exceptionable) || $guard(_exceptionable, {
+                        path: _path + ".files[" + _index1 + "]",
+                        expected: "IAttachmentFile",
+                        value: elem
+                    })) || $guard(_exceptionable, {
+                        path: _path + ".files",
+                        expected: "Array<IAttachmentFile>",
+                        value: input.files
+                    }));
+                    const $ao1 = (input, _path, _exceptionable = true) => (null === input.name || "string" === typeof input.name && (1 <= input.name.length || $guard(_exceptionable, {
+                        path: _path + ".name",
+                        expected: "string & MinLength<1>",
+                        value: input.name
+                    })) && (input.name.length <= 255 || $guard(_exceptionable, {
+                        path: _path + ".name",
+                        expected: "string & MaxLength<255>",
+                        value: input.name
+                    })) || $guard(_exceptionable, {
+                        path: _path + ".name",
+                        expected: "((string & MinLength<1> & MaxLength<255>) | null)",
+                        value: input.name
+                    })) && (null === input.extension || "string" === typeof input.extension && (1 <= input.extension.length || $guard(_exceptionable, {
+                        path: _path + ".extension",
+                        expected: "string & MinLength<1>",
+                        value: input.extension
+                    })) && (input.extension.length <= 8 || $guard(_exceptionable, {
+                        path: _path + ".extension",
+                        expected: "string & MaxLength<8>",
+                        value: input.extension
+                    })) || $guard(_exceptionable, {
+                        path: _path + ".extension",
+                        expected: "((string & MinLength<1> & MaxLength<8>) | null)",
+                        value: input.extension
+                    })) && ("string" === typeof input.url && (/^[a-zA-Z0-9]+:\/\/(?:www.)?[-a-zA-Z0-9@:%._+~#=]{1,256}.[a-zA-Z0-9()]{1,6}\b(?:[-a-zA-Z0-9()@:%_+.~#?&/=]*)$/.test(input.url) || $guard(_exceptionable, {
+                        path: _path + ".url",
+                        expected: "string & Format<\"url\">",
+                        value: input.url
+                    })) || $guard(_exceptionable, {
+                        path: _path + ".url",
+                        expected: "(string & Format<\"url\">)",
+                        value: input.url
+                    }));
+                    return ("object" === typeof input && null !== input || $guard(true, {
+                        path: _path + "",
+                        expected: "IBbsArticle",
+                        value: input
+                    })) && $ao0(input, _path + "", true) || $guard(true, {
+                        path: _path + "",
+                        expected: "IBbsArticle",
+                        value: input
+                    });
+                })(input, "$input", true);
+            return input;
+        }; const stringify = input => {
+            const $io1 = input => (null === input.name || "string" === typeof input.name && (1 <= input.name.length && input.name.length <= 255)) && (null === input.extension || "string" === typeof input.extension && (1 <= input.extension.length && input.extension.length <= 8)) && ("string" === typeof input.url && /^[a-zA-Z0-9]+:\/\/(?:www.)?[-a-zA-Z0-9@:%._+~#=]{1,256}.[a-zA-Z0-9()]{1,6}\b(?:[-a-zA-Z0-9()@:%_+.~#?&/=]*)$/.test(input.url));
+            const $string = core_1.TypedRoute.Get.string;
+            const $so0 = input => `{"id":${$string(input.id)},"created_at":${$string(input.created_at)},"title":${$string(input.title)},"body":${$string(input.body)},"files":${`[${input.files.map(elem => $so1(elem)).join(",")}]`}}`;
+            const $so1 = input => `{"name":${null !== input.name ? $string(input.name) : "null"},"extension":${null !== input.extension ? $string(input.extension) : "null"},"url":${$string(input.url)}}`;
+            return $so0(input);
+        }; return stringify(assert(input)); } }),
     __metadata("design:type", Function),
     __metadata("design:paramtypes", []),
     __metadata("design:returntype", Promise)
 ], BbsArticlesController.prototype, "random", null);
-BbsArticlesController = __decorate([
+exports.BbsArticlesController = BbsArticlesController = __decorate([
     (0, common_1.Controller)("bbs/articles")
 ], BbsArticlesController);
-exports.BbsArticlesController = BbsArticlesController;
 ```
     </Tab>
 </Tabs>
@@ -292,7 +267,7 @@ With those type and comment tags, you can add additional validation logics. If y
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
     <Tab>
-```typescript copy filename="examples/src/is-comment-tags.ts" showLineNumbers {3}
+```typescript copy filename="examples/src/is-special-tags.ts" showLineNumbers {3}
 import typia, { tags } from "typia";
 
 export const checkSpecialTag = typia.createIs<SpecialTag>();
@@ -311,31 +286,54 @@ interface SpecialTag {
 ```
     </Tab>
     <Tab>
-```javascript filename="examples/bin/is-comment-tags.js" showLineNumbers {3-24}
-import typia from "typia";
-
-export const checkCommentTag = (input) => {
-    const $is_datetime = typia.createIs.is_datetime;
-    const $is_uuid = typia.createIs.is_uuid;
+```javascript filename="examples/bin/is-special-tags.js" showLineNumbers {10-45}
+"use strict";
+var __importDefault =
+    (this && this.__importDefault) ||
+    function (mod) {
+        return mod && mod.__esModule ? mod : { default: mod };
+    };
+Object.defineProperty(exports, "__esModule", { value: true });
+exports.checkSpecialTag = void 0;
+const typia_1 = __importDefault(require("typia"));
+const checkSpecialTag = (input) => {
     const $io0 = (input) =>
-        "number" === typeof input.type &&
-        parseInt(input.type) === input.type &&
-        (undefined === input.number ||
-            ("number" === typeof input.number &&
-                19 < input.number &&
-                100 >= input.number)) &&
-        "string" === typeof input.string &&
-        3 <= input.string.length &&
+        "number" === typeof input.int32 &&
+        Math.floor(input.int32) === input.int32 &&
+        -2147483648 <= input.int32 &&
+        input.int32 <= 2147483647 &&
+        (undefined === input.range ||
+            ("number" === typeof input.range &&
+                19 < input.range &&
+                input.range <= 100)) &&
+        "string" === typeof input.minLength &&
+        3 <= input.minLength.length &&
         "string" === typeof input.pattern &&
-        RegExp(/^[a-z]+$/).test(input.pattern) &&
-        (null === input.format ||
-            ("string" === typeof input.format && $is_datetime(input.format))) &&
-        Array.isArray(input.array) &&
-        3 <= input.array.length &&
-        100 >= input.array.length &&
-        input.array.every((elem) => "string" === typeof elem && $is_uuid(elem));
+        /^[a-z]+$/.test(input.pattern) &&
+        (null === input.date ||
+            ("string" === typeof input.date &&
+                /^(d{4})-(d{2})-(d{2})$/.test(input.date))) &&
+        "string" === typeof input.ip &&
+        (/^(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?).(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?).(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?).(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$/.test(
+            input.ip,
+        ) ||
+            /^(([0-9a-fA-F]{1,4}:){7,7}[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,7}:|([0-9a-fA-F]{1,4}:){1,6}:[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,5}(:[0-9a-fA-F]{1,4}){1,2}|([0-9a-fA-F]{1,4}:){1,4}(:[0-9a-fA-F]{1,4}){1,3}|([0-9a-fA-F]{1,4}:){1,3}(:[0-9a-fA-F]{1,4}){1,4}|([0-9a-fA-F]{1,4}:){1,2}(:[0-9a-fA-F]{1,4}){1,5}|[0-9a-fA-F]{1,4}:((:[0-9a-fA-F]{1,4}){1,6})|:((:[0-9a-fA-F]{1,4}){1,7}|:)|fe80:(:[0-9a-fA-F]{0,4}){0,4}%[0-9a-zA-Z]{1,}|::(ffff(:0{1,4}){0,1}:){0,1}((25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9]).){3,3}(25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9])|([0-9a-fA-F]{1,4}:){1,4}:((25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9]).){3,3}(25[0-5]|(2[0-4]|1{0,1}[0-9]){0,1}[0-9]))$/.test(
+                input.ip,
+            )) &&
+        Array.isArray(input.uuids) &&
+        3 <= input.uuids.length &&
+        input.uuids.length <= 100 &&
+        input.uuids.every(
+            (elem) =>
+                "string" === typeof elem &&
+                /^(?:[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}|00000000-0000-0000-0000-000000000000)$/i.test(
+                    elem,
+                ),
+        );
     return "object" === typeof input && null !== input && $io0(input);
 };
+exports.checkSpecialTag = checkSpecialTag;
+
 ```
     </Tab>
 </Tabs>
