--- a/website/pages/docs/sdk/swagger.mdx
+++ b/website/pages/docs/sdk/swagger.mdx
@@ -76,13 +76,10 @@ export default config;
 ```
     </Tab>
     <Tab>
-```typescript filename="INestiaConfig.ts" showLineNumbers {14-19, 156-199}
-import type ts from "typescript";
-
+```typescript filename="INestiaConfig.ts" showLineNumbers {11-16, 164-214}
 import type { ISwagger } from "./structures/ISwagger";
 import type { ISwaggerInfo } from "./structures/ISwaggerInfo";
 import type { ISwaggerSecurityScheme } from "./structures/ISwaggerSecurityScheme";
-import type { StripEnums } from "./utils/StripEnums";
 
 /**
  * Definition for the `nestia.config.ts` file.
@@ -135,55 +132,28 @@ export interface INestiaConfig {
     e2e?: string;
 
     /**
-     * Compiler options for the TypeScript.
+     * Whether to use propagation mode or not.
      *
-     * If you've omitted this property or the assigned property cannot fully cover the
-     * `tsconfig.json`, the properties from the `tsconfig.json` would be assigned to here.
-     * Otherwise, this property has been configured and it's detailed values are different
-     * with the `tsconfig.json`, this property values would be used instead.
-     *
-     * ```typescript
-     * import ts from "typescript";
-     *
-     * const tsconfig: ts.TsConfig;
-     * const nestiaConfig: IConfiguration;
-     *
-     * const compilerOptions: ts.CompilerOptions = {
-     *     ...tsconfig.compilerOptions,
-     *     ...(nestiaConfig.compilerOptions ?? {})
-     * }
-     * ```
-     */
-    compilerOptions?: StripEnums<ts.CompilerOptions>;
-
-    /**
-     * Whether to assert parameter types or not.
-     *
-     * If you configure this property to be `true`, all of the function
-     * parameters of SDK library would be checked through
-     * [`typia.assert<T>()` function](https://typia.io/docs/validators/assert/).
-     *
-     * This option would make your SDK library compilation time a little bit slower,
-     * but would enahcne the type safety even in the runtime level.
+     * If being configured, interaction functions of the SDK library would
+     * perform the propagation mode. The propagation mode means that never
+     * throwing exception even when status code is not 200 (or 201), but just
+     * returning the {@link IPropagation} typed instance, which can specify its body
+     * type through discriminated union determined by status code.
      *
      * @default false
      */
-    assert?: boolean;
+    propagate?: boolean;
 
     /**
-     * Whether to optimize JSON string conversion 10x faster or not.
+     * Whether to clone DTO structures or not.
      *
-     * If you configure this property to be `true`, the SDK library would utilize the
-     * [`typia.assertStringify<T>() function`](https://github.com/samchon/typia#enhanced-json)
-     * to boost up JSON serialization speed and ensure type safety.
-     *
-     * This option would make your SDK library compilation time a little bit slower,
-     * but would enhance JSON serialization speed 10x faster. Also, it can ensure type
-     * safety even in the rumtime level.
+     * If being configured, all of DTOs used in the backend server would be cloned
+     * into the `structures` directory, and the SDK library would be refer to the
+     * cloned DTOs instead of the original.
      *
      * @default false
      */
-    json?: boolean;
+    clone?: boolean;
 
     /**
      * Whether to wrap DTO by primitive type.
@@ -214,6 +184,44 @@ export interface INestiaConfig {
      * @default false
      */
     simulate?: boolean;
+
+    /**
+     * Location of `tsconfig.json` file.
+     *
+     * If be configured, target file will replace the `tsconfig.json` file.
+     *
+     * @default tsconfig.json
+     */
+    project?: string;
+
+    /**
+     * Whether to assert parameter types or not.
+     *
+     * If you configure this property to be `true`, all of the function
+     * parameters of SDK library would be checked through
+     * [`typia.assert<T>()` function](https://typia.io/docs/validators/assert/).
+     *
+     * This option would make your SDK library compilation time a little bit slower,
+     * but would enahcne the type safety even in the runtime level.
+     *
+     * @default false
+     */
+    assert?: boolean;
+
+    /**
+     * Whether to optimize JSON string conversion 10x faster or not.
+     *
+     * If you configure this property to be `true`, the SDK library would utilize the
+     * [`typia.assertStringify<T>() function`](https://github.com/samchon/typia#enhanced-json)
+     * to boost up JSON serialization speed and ensure type safety.
+     *
+     * This option would make your SDK library compilation time a little bit slower,
+     * but would enhance JSON serialization speed 10x faster. Also, it can ensure type
+     * safety even in the rumtime level.
+     *
+     * @default false
+     */
+    json?: boolean;
 }
 export namespace INestiaConfig {
     /**
@@ -239,9 +247,9 @@ export namespace INestiaConfig {
         /**
          * Output path of the `swagger.json`.
          *
-         * If you've configured only directory, the file name would be the 
-         * `swagger.json`. Otherwise you've configured the full path with file name 
-         * and extension, the `swagger.json` file would be renamed to it.
+         * If you've configured only directory, the file name would be the `swagger.json`.
+         * Otherwise you've configured the full path with file name and extension, the
+         * `swagger.json` file would be renamed to it.
          */
         output: string;
 
@@ -269,12 +277,19 @@ export namespace INestiaConfig {
         /**
          * Decompose query DTO.
          *
-         * If you configure this property to be `true`, the query DTO would be 
-         * decomposed into individual query parameters per each property.
+         * If you configure this property to be `true`, the query DTO would be decomposed
+         * into individual query parameters per each property.
          *
          * @default false
          */
         decompose?: boolean;
+
+        operationId?(props: {
+            class: string;
+            function: string;
+            method: "HEAD" | "GET" | "POST" | "PUT" | "PATCH" | "DELETE";
+            path: string;
+        }): string;
     }
 }
 ```
@@ -487,7 +502,7 @@ For reference, target security schemes must be configured in the `nestia.config.
 import { TypedBody, TypedParam, TypedRoute } from "@nestia/core";
 import { Controller } from "@nestjs/common";
 import { ApiSecurity } from "@nestjs/swagger";
-import typia from "typia";
+import typia, { tags } from "typia";
 
 import { IBbsArticle } from "@api/lib/structures/IBbsArticle";
 
@@ -536,7 +551,7 @@ export class BbsArticlesController {
     @TypedRoute.Put(":id")
     public async update(
         @TypedParam("section") section: string,
-        @TypedParam("id", "uuid") id: string,
+        @TypedParam("id") id: string & tags.Format<"uuid">,
         @TypedBody() input: IBbsArticle.IStore,
     ): Promise<IBbsArticle> {
         return {
@@ -556,7 +571,7 @@ export class BbsArticlesController {
     @TypedRoute.Delete(":id")
     public erase(
         @TypedParam("section") section: string,
-        @TypedParam("id", "uuid") id: string,
+        @TypedParam("id") id: string & tags.Format<"uuid">,
     ): void {
         section;
         id;
@@ -971,48 +986,55 @@ Also, such type and comment tags of DTO properties can be used to enhance valida
 
 Let's see how those type and comment tags work with example code.
 
-  - common
-    - `@deprecated`
-    - `@hidden`
-    - `@internal`
-    - `@title {string}`
-    - `@default {value}`
   - number
-    - `@type {"int"|"uint"}`
-    - `@minimum {number}`
-    - `@maximum {number}`
-    - `@exclusiveMinimum {number}`
-    - `@exclusiveMaximum {number}`
-    - `@multipleOf {number}`
+    - `number & Type<{keyword}>`
+      - `int32`
+      - `uint32`
+      - `uint64`
+      - `int64`
+      - `float`
+      - `double`
+    - `number & Minimum<{number}>`
+    - `number & Maximum<{number}>`
+    - `number & ExclusiveMaximum<{number}>`
+    - `number & ExclusiveMinimum<{number}>`
+    - `number & MultipleOf<{number}>`
+  - bigint
+    - `bigint & Type<{keyword}>`
+      - `int64`
+      - `uint64`
+    - `bigint & Minimum<{bigint}>`
+    - `bigint & Maximum<{bigint}>`
+    - `bigint & ExclusiveMaximum<{bigint}>`
+    - `bigint & ExclusiveMinimum<{bigint}>`
+    - `bigint & MultipleOf<{bigint}>`
   - string
-    - `@minLength {number}`
-    - `@maxLength {number}`
-    - `@pattern {regex}`
-    - `@format {keyword}`
+    - `string & MinLength<{number}>`
+    - `string & MaxLength<{number}>`
+    - `string & Pattern<{regex}>`
+    - `string & Format<{keyword}>`
       - `email`
       - `uuid`
       - `ipv4`
       - `ipv6`
+      - `url`
       - `date`: YYYY-MM-DD
       - `date-time`: `Date.toISOString()`
-  - array
-    - `@minItems {number}`
-    - `@maxItems {number}`
 
 <Tabs items={[
     <code>IBbsArticle.ts</code>, 
     <code>swagger.json</code>
 ]}>
     <Tab>
-```typescript copy filename="CommentTag.ts"
-export interface CommentTag {
+```typescript copy filename="SpecialTag.ts" showLineNumbers
+export interface SpecialTag {
     /**
      * Deprecated tags are just used for marking.
      * 
      * @title Unsigned integer
      * @deprecated
      */
-    type: number & tags.Format<"uint32">;
+    type: number & tags.Type<"uint32">;
 
     /**
      * Internal tagged property never be shown in JSON schema.
@@ -1071,63 +1093,78 @@ export interface CommentTag {
 ```
     </Tab>
     <Tab>
-```json filename="swagger.json" showLineNumbers {6-7, 9-10, 15-18, 23, 28, 33, 42, 44-45}
-"CommentTag": {
-    "$id": "#/components/schemas/CommentTag",
-    "type": "object",
-    "properties": {
-        "type": {
-            "deprecated": true,
-            "title": "Unsigned integer",
-            "description": "Deprecated tags are just used for marking.\n\n@title Unsigned integer\n@type uint\n@deprecated",
-            "type": "integer",
-            "minimum": 0
-        },
-        "number": {
-            "description": "You can limit the range of number.\n\n@exclusiveMinimum 19\n@maximum 100\n@default 30",
-            "type": "number",
-            "minimum": 19,
-            "exclusiveMinimum": true,
-            "maximum": 100,
-            "default": 30
-        },
-        "string": {
-            "description": "You can limit the length of string.\n\n@minLength 3",
-            "type": "string",
-            "minLength": 3
-        },
-        "pattern": {
-            "description": "You can limit the pattern of string.\n\n@pattern ^[a-z]+$",
-            "type": "string",
-            "pattern": "^[a-z]+$"
-        },
-        "format": {
-            "description": "You can limit the format of string.\n\n@format date-time",
-            "type": "string",
-            "format": "date-time",
-            "nullable": true
-        },
-        "array": {
-            "description": "In the Array case, possible to restrict its elements.\n\n@minItems 3\n@maxItems 100\n@format uuid",
-            "type": "array",
-            "items": {
-                "description": "In the Array case, possible to restrict its elements.\n\n@minItems 3\n@maxItems 100\n@format uuid",
-                "type": "string",
-                "format": "uuid"
+```json filename="swagger.json" showLineNumbers {6, 9, 14-17, 22, 27, 32, 36-47, 56, 58-59}
+{
+    "SpecialTag": {
+        "type": "object",
+        "properties": {
+            "type": {
+                "deprecated": true,
+                "title": "Unsigned integer",
+                "description": "Deprecated tags are just used for marking.",
+                "type": "integer"
             },
-            "minItems": 3,
-            "maxItems": 100
-        }
-    },
-    "required": [
-        "type",
-        "hidden",
-        "string",
-        "pattern",
-        "format",
-        "array"
-    ],
-    "description": "In the Array case, possible to restrict its elements.\n\n@minItems 3\n@maxItems 100\n@format uuid"
+            "number": {
+                "description": "You can limit the range of number.\n\nAlso, you can configure `default` property by comment tag.",
+                "type": "number",
+                "minimum": 19,
+                "exclusiveMinimum": true,
+                "maximum": 100,
+                "default": 30
+            },
+            "string": {
+                "description": "You can limit the length of string.",
+                "type": "string",
+                "minLength": 3
+            },
+            "pattern": {
+                "description": "You can limit the pattern of string.",
+                "type": "string",
+                "pattern": "^[a-z]+$"
+            },
+            "format": {
+                "description": "You can limit the format of string.",
+                "type": "string",
+                "format": "date-time",
+                "nullable": true
+            },
+            "ip": {
+                "oneOf": [
+                    {
+                        "description": "You also can perform union type in type tags.",
+                        "type": "string",
+                        "format": "ipv4"
+                    },
+                    {
+                        "description": "You also can perform union type in type tags.",
+                        "type": "string",
+                        "format": "ipv6"
+                    }
+                ],
+                "description": "You also can perform union type in type tags."
+            },
+            "array": {
+                "description": "In the Array case, only type tags can limit elements' type.",
+                "type": "array",
+                "items": {
+                    "description": "In the Array case, only type tags can limit elements' type.",
+                    "type": "string",
+                    "format": "uuid"
+                },
+                "maxItems": 100,
+                "minItems": 3
+            }
+        },
+        "nullable": false,
+        "required": [
+            "type",
+            "string",
+            "pattern",
+            "format",
+            "ip",
+            "array"
+        ],
+    }
 }
 ```
     </Tab>
