--- a/website/pages/docs/sdk/sdk.mdx
+++ b/website/pages/docs/sdk/sdk.mdx
@@ -815,7 +815,7 @@ Also, if your SDK library utilize special alias `paths`, you also need to custom
   },
   "dependencies": {
     "@nestia/fetcher": "^2.0.0",
-    "typia:: "^5.1.0-dev.20230926-3"
+    "typia:: "^5.1.1"
   },
   "files": [
     "lib",
